# RBR

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  run.pbs  test_batch.rb  test_batch_real.rb  test_large_real.rb  test_large_real_p.rb
cmake/: FindCBLAS.cmake  utils.cmake
doc/: README_en.md  README_zh.md
examples/: amazon  email-Enron  email-Enron.mat  polblogs  polblogs.mat  sbm  sbm.mat
include/: DCRBR.h  config.h.in  spmat.h
scripts/: tabular_gen.rb  tabular_gen_dimacs.rb
src/: CMakeLists.txt  DCRBR_kmeans.c  DCRBR_rounding.c  Makefile  RBR.h  adj_matrix.c  adj_matrix.h  api_macro.h  cal_CC_S.c  cal_Q.m  contrib_test.c  genX.m  generate_labels.c  kmeans  kmeans.c  main.c  metric.c  mex_rbr.c  mexopts.sh  normal_dist.cpp  out  rbr.c  rbr_blas.h  rbr_kmeans.m  rbr_mc.c  rbr_param.c  rbr_result.c  rbr_subroutines.h  run.slurm  solve_sub_U.cpp  spmat.c  test_dimacs10.rb  test_gset.rb  test_large_real.c  test_large_real_k.c  test_large_real_p.c  test_small_real.c  test_synth.c  types.h  utils.c
src/contrib/: Makefile  dsort.c  ex01.c  kb07ad.c  kb07ad.f  solve_sub_U.cpp
src/main/: CMakeLists.txt  main.c
src/matlab/: CMakeLists.txt  cal_Q.m  demo.m  mex_rbr.c  rbr.m
